
    * Added for the v2.0 C API Specification:
        * GrB_IndexUnaryOp: FIXME
        * GrB_select: FIXME
        * GrB2_*wait: with mode paramater (GrB_COMPLETE, GrB_MATERIALIZE) FIXME
        * GrB_*_extractElement_Scalar: FIXME
            get an entry from a matrix or vector,
            writing result to a GrB_Scalar
        * GrB_reduce: reduce matrix or vector to GrB_Scalar FIXME
        * GrB*build: when dup is NULL FIXME: TEST THIS
        * GrB import/export: import/export from/to user-provided arrays
        * GrB_EMPTY_OBJECT, GrB_NOT_IMPLEMENTED: error codes added
        * GrB_*_setElement_Scalar: set an entry in a matrix or vector,
            from a GrB_Scalar
        * GrB_Scalar: replaces GxB_Scalar, GxB_Scalar_* functions
            renamed to GrB
        * GrB_Matrix_diag: same as GxB_Matrix_diag (C, v, 0, NULL)
    * GxB_SelectOp_new2: create a named selectop
    * GxB_BinaryOp_new: create a named binary operator
    * GxB_UnaryOp_new: create a named unary operator
    * GxB_Type_new: to create a named type and definition, as strings
    * GxB_Type_name: to query the name of a type
    * added GxB_BinaryOp_xtype_name, GxB_BinaryOp_ytype_name,
        GxB_BinaryOp_ztype_name, GxB_deserialize_type_name,
        GxB_Matrix_type_name, GxB_Scalar_type_name,
        GxB_SelectOp_ttype_name, GxB_SelectOp_xtype_name,
        GxB_UnaryOp_xtype_name, GxB_UnaryOp_ztype_name,
        GxB_Vector_type_name: to query the name of a type as a string
    * GxB_BinaryOp_xtype, GxB_BinaryOp_ytype, GxB_BinaryOp_ztype,
        GxB_Matrix_type, GxB_Scalar_type, GxB_SelectOp_ttype,
        GxB_SelectOp_xtype, GxB_UnaryOp_xtype, GxB_UnaryOp_ztype,
        GxB_Vector_type: declared historical; will be kept but not
        recommended (use *type_name methods).
    * GxB_Matrix_serialize/deserialize: with compression
    * GxB_Vector_serialize/deserialize: FIXME 
    * added LZ4/LZ4HC: compression library, http://www.lz4.org (BSD 2),