@@ -25,6 +25,9 @@
 // dup is a string that defaults to 'plus.xtype' where xtype is the type of X.
 // If dup is given by without a type,  type of dup defaults to the type of X.
 
+// If dup is the empty string '' then any duplicates result in an error.
+// If dup is the string 'ignore' then duplicates are ignored.
+
 // type is a string that defines is the type of A, which defaults to the type
 // of X.
 
@@ -188,20 +191,28 @@ void mexFunction
     // get the dup operator
     //--------------------------------------------------------------------------
 
-    GrB_BinaryOp dup = NULL ;
-    if (nargin > 5)
+    // default_dup: if dup does not appear as a parameter
+    bool default_dup = (nargin < 6) ;
+    GrB_BinaryOp dup = GxB_IGNORE_DUP ;
+    if (!default_dup)
     { 
         dup = gb_mxstring_to_binop (pargin [5], xtype, xtype) ;
     }
 
-    // if dup is NULL, defaults to plus.xtype, below, or GrB_LOR for boolean
+    // if dup defaults to plus.xtype, below, or GrB_LOR for boolean
 
-    bool nice_iso_dup = false ;
-    if (dup == NULL)
+    bool nice_iso_dup ;
+    if (default_dup)
     {
         // dup will be GrB_LOR which is nice for an iso build.  For all other
         // types, the dup is plus, which is not nice.
         nice_iso_dup = (xtype == GrB_BOOL) ;
+    }
+    else if (dup == NULL || dup == GxB_IGNORE_DUP)
+    {
+        // if X is a scalar and dup is '' (NULL) or 'ignore' (GxB_IGNORE_DUP),
+        // then dup is a nice iso dup.
+        nice_iso_dup = true ;
     }
     else
     {
@@ -257,7 +268,7 @@ void mexFunction
 
     if (iso_build)
     {
-        // build an iso matrix, with no dup operator needed
+        // build an iso matrix, with no dup operator (dup is GxB_IGNORE_DUP)
         GrB_Scalar x_scalar = (GrB_Scalar) gb_get_shallow (Xm) ;
         OK1 (A, GxB_Matrix_build_Scalar (A, I, J, x_scalar, nvals)) ;
         OK (GrB_Scalar_free (&x_scalar)) ;
@@ -266,7 +277,7 @@ void mexFunction
     { 
         bool empty = 0 ;
         bool *X = (nvals == 0) ? &empty : ((bool *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_LOR ;
+        if (default_dup) dup = GrB_LOR ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (bool)) ;
@@ -279,7 +290,7 @@ void mexFunction
     { 
         int8_t empty = 0 ;
         int8_t *X = (nvals == 0) ? &empty : ((int8_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_INT8 ;
+        if (default_dup) dup = GrB_PLUS_INT8 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (int8_t)) ;
@@ -292,7 +303,7 @@ void mexFunction
     { 
         int16_t empty = 0 ;
         int16_t *X = (nvals == 0) ? &empty : ((int16_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_INT16 ;
+        if (default_dup) dup = GrB_PLUS_INT16 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (int16_t)) ;
@@ -305,7 +316,7 @@ void mexFunction
     { 
         int32_t empty = 0 ;
         int32_t *X = (nvals == 0) ? &empty : ((int32_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_INT32 ;
+        if (default_dup) dup = GrB_PLUS_INT32 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (int32_t)) ;
@@ -318,7 +329,7 @@ void mexFunction
     { 
         int64_t empty = 0 ;
         int64_t *X = (nvals == 0) ? &empty : ((int64_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_INT64 ;
+        if (default_dup) dup = GrB_PLUS_INT64 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (int64_t)) ;
@@ -331,7 +342,7 @@ void mexFunction
     { 
         uint8_t empty = 0 ;
         uint8_t *X = (nvals == 0) ? &empty : ((uint8_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_UINT8 ;
+        if (default_dup) dup = GrB_PLUS_UINT8 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (uint8_t)) ;
@@ -344,7 +355,7 @@ void mexFunction
     { 
         uint16_t empty = 0 ;
         uint16_t *X = (nvals == 0) ? &empty : ((uint16_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_UINT16 ;
+        if (default_dup) dup = GrB_PLUS_UINT16 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (uint16_t)) ;
@@ -357,7 +368,7 @@ void mexFunction
     { 
         uint32_t empty = 0 ;
         uint32_t *X = (nvals == 0) ? &empty : ((uint32_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_UINT32 ;
+        if (default_dup) dup = GrB_PLUS_UINT32 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (uint32_t)) ;
@@ -370,7 +381,7 @@ void mexFunction
     { 
         uint64_t empty = 0 ;
         uint64_t *X = (nvals == 0) ? &empty : ((uint64_t *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_UINT64 ;
+        if (default_dup) dup = GrB_PLUS_UINT64 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (uint64_t)) ;
@@ -383,7 +394,7 @@ void mexFunction
     { 
         float empty = 0 ;
         float *X = (nvals == 0) ? &empty : ((float *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_FP32 ;
+        if (default_dup) dup = GrB_PLUS_FP32 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (float)) ;
@@ -396,7 +407,7 @@ void mexFunction
     { 
         double empty = 0 ;
         double *X = (nvals == 0) ? &empty : ((double *) mxGetData (Xm)) ;
-        if (dup == NULL) dup = GrB_PLUS_FP64 ;
+        if (default_dup) dup = GrB_PLUS_FP64 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (double)) ;
@@ -410,7 +421,7 @@ void mexFunction
         GxB_FC32_t empty = GxB_CMPLXF (0,0) ;
         GxB_FC32_t *X = &empty ;
         if (nvals > 0) X = (GxB_FC32_t *) mxGetData (Xm) ;
-        if (dup == NULL) dup = GxB_PLUS_FC32 ;
+        if (default_dup) dup = GxB_PLUS_FC32 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (GxB_FC32_t)) ;
@@ -425,7 +436,7 @@ void mexFunction
         GxB_FC64_t empty = GxB_CMPLX (0,0) ;
         GxB_FC64_t *X = &empty ;
         if (nvals > 0) X = (GxB_FC64_t *) mxGetData (Xm) ;
-        if (dup == NULL) dup = GxB_PLUS_FC64 ;
+        if (default_dup) dup = GxB_PLUS_FC64 ;
         if (X_is_scalar)
         { 
             X2 = mxMalloc (nvals * sizeof (GxB_FC64_t)) ;
