@@ -7,6 +7,11 @@
 
 //------------------------------------------------------------------------------
 
+// If dup is NULL: any duplicates result in an error.
+// If dup is GxB_IGNORE_DUP: duplicates are ignored, which is not an error.
+// If dup is a valid binary operator, it is used to reduce any duplicates to
+// a single value.
+
 #include "GB_build.h"
 
 #define GB_VECTOR_BUILD(prefix,type,T,xtype)                                  \
@@ -22,7 +27,6 @@ GrB_Info GB_EVAL3 (prefix, _Vector_build_, T) /* build a vector from tuples*/ \
     GB_WHERE (w, "GrB_Vector_build_" GB_STR(T) " (w, I, X, nvals, dup)") ;    \
     GB_BURBLE_START ("GrB_Vector_build_" GB_STR(T)) ;                         \
     GB_RETURN_IF_NULL_OR_FAULTY (w) ;  /* check now so w->type can be done */ \
-    GB_RETURN_IF_NULL_OR_FAULTY (dup) ;                                       \
     ASSERT (GB_VECTOR_OK (w)) ;                                               \
     GrB_Info info = GB_build ((GrB_Matrix) w, I, NULL, X, nvals, dup,         \
         xtype, false, false, Context) ;                                       \
