@@ -10,8 +10,8 @@
 // GxB_Vector_build_Scalar builds a vector w whose values in its sparsity
 // pattern are all equal to a value given by a GrB_Scalar.  Unlike the
 // GrB_Vector_build_* methods, there is no binary dup operator.  Instead, any
-// duplicate indices are ignored.  The I array is of size nvals, just like
-// GrB_Vector_build_*.
+// duplicate indices are ignored, which is not an error condition.  The I array
+// is of size nvals, just like GrB_Vector_build_*.
 
 #include "GB_build.h"
 #define GB_FREE_ALL ;
@@ -44,8 +44,8 @@ GrB_Info GxB_Vector_build_Scalar    // build a vector from (i,scalar) tuples
     // build the vector
     //--------------------------------------------------------------------------
 
-    GrB_Info info = GB_build ((GrB_Matrix) w, I, NULL, scalar->x, nvals, NULL,
-        scalar->type, false, true, Context) ;
+    GrB_Info info = GB_build ((GrB_Matrix) w, I, NULL, scalar->x, nvals,
+        GxB_IGNORE_DUP, scalar->type, false, true, Context) ;
     GB_BURBLE_END ;
     return (info) ;
 }
